# fidance

./: README.md  pyproject.toml
data_pipeline/ingestion/: ingest_data.py
